--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/theme-chalk/index.css">
+    <!-- <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/theme-chalk/index.css"> -->
+    <!-- 引入样式 -->
+  <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
+    <link rel="stylesheet" href="<%=css%>">
+  <% } %>
     <title><%= webpackConfig.name %></title>
   </head>
   <body>
@@ -14,9 +18,11 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.12/vue.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.js"></script>
+    <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
+      <script src="<%=js%>"></script>
+    <% } %>
+  </body> 
+  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.15.0/index.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/xlsx/0.16.8/jszip.min.js"></script>
-    <script src="https://cdn.bootcdn.net/ajax/libs/xlsx/0.16.8/xlsx.full.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/xlsx/0.16.8/xlsx.full.min.js"></script> -->
 </html>
